--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@
 # References:
 # - https://docs.docker.com/compose/env-file/
 # - https://docs.docker.com/compose/reference/envvars/
-COMPOSE_PROJECT_NAME=isle-site-template
+COMPOSE_PROJECT_NAME=test
 
 # Use buildkit when building images.
 COMPOSE_DOCKER_CLI_BUILD=1
@@ -44,4 +44,4 @@ TAG=local
 DOMAIN=islandora.dev
 
 # The email to use for admin users and Lets Encrypt.
-EMAIL=postmaster@example.com
+EMAIL=dmoses@upei.ca
